tests/ui/fail/no_supertrait.stderr
error: Interfaces must inherit from another interface like so: `interface LoneInterface: IParentInterface`
 --> $DIR/no_supertrait.rs:5:26
  |
5 |     pub unsafe interface LoneInterface {
  |                          ^^^^^^^^^^^^^
